--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce_app",
   "version": "0.1.0",
   "private": true,
- 
+  "homepage": "http://AnishaKB1.github.io/Ecommerce",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -22,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
     
   },
   "eslintConfig": {
